--- a/01.Form-Validator/style.css
+++ b/01.Form-Validator/style.css
@@ -23,6 +23,14 @@ body {
   min-height: 100vh;
 }
 
+.hide {
+  display: none !important;
+}
+
+.show {
+  display: block !important;
+}
+
 .container {
   background-color: #fff;
   border-radius: 5px;
@@ -73,6 +81,18 @@ h2 {
 
 .form-control.error input {
   border-color: var(--error-color);
+}
+
+.password-control {
+  display: flex;
+}
+
+.password-icon {
+  color: #777;
+  position: absolute;
+  top: 50%;
+  right: 3%;
+  transform: translateY(-30%);
 }
 
 .form-control small {
