--- a/01.Form-Validator/style.css
+++ b/01.Form-Validator/style.css
@@ -31,6 +31,22 @@ body {
   display: block !important;
 }
 
+.visible {
+  visibility: visible !important;
+}
+
+.invisible {
+  visibility: hidden !important;
+}
+
+.success {
+  border: 2px solid var(--success-color) !important;
+}
+
+.error {
+  border: 2px solid var(--error-color) !important;
+}
+
 .container {
   background-color: #fff;
   border-radius: 5px;
@@ -75,14 +91,6 @@ h2 {
   border-color: #777;
 }
 
-.form-control.success input {
-  border-color: var(--success-color);
-}
-
-.form-control.error input {
-  border-color: var(--error-color);
-}
-
 .password-control {
   display: flex;
 }
@@ -100,11 +108,6 @@ h2 {
   position: absolute;
   bottom: 0;
   left: 0;
-  visibility: hidden;
-}
-
-.form-control.error small {
-  visibility: visible;
 }
 
 .form button {
