--- a/06.Landing-Page/style.css
+++ b/06.Landing-Page/style.css
@@ -17,6 +17,13 @@
 body {
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
+
+  transition: transform 0.3s ease;
+}
+
+body.show-nav {
+  /* Width of nav */
+  transform: translateX(200px);
 }
 
 /* NAVBAR SECTION */
@@ -143,6 +150,10 @@ button:focus {
   bottom: 0;
 }
 
+.modal-container.show-modal {
+  display: block;
+}
+
 .modal {
   background-color: #fff;
   border-radius: 5px;
@@ -154,6 +165,8 @@ button:focus {
   transform: translate(-50%, -50%);
   max-width: 100%;
   width: 400px;
+  animation-name: modalOpen;
+  animation-duration: var(--modal-duration);
 }
 
 .modal-header {
@@ -209,4 +222,15 @@ button:focus {
 
 .modal-form input[type='submit']:focus {
   outline: none;
+}
+
+/* ANIMATIONS */
+@keyframes modalOpen {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
