--- a/07.Hangman-Game/style.css
+++ b/07.Hangman-Game/style.css
@@ -77,3 +77,47 @@ h1 {
   height: 50px;
   width: 20px;
 }
+
+/* POPUP SECTION */
+.popup-container {
+  background-color: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* display: flex; */
+  display: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup {
+  background: #2980b9;
+  border-radius: 5px;
+  box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: center;
+}
+
+.popup button {
+  cursor: pointer;
+  background-color: #fff;
+  color: #2980b9;
+  border: none;
+  border-radius: 5px;
+  margin-top: 40px;
+  padding: 12px 20px;
+  font-size: 16px;
+  backface-visibility: hidden;
+
+  transition: all 0.1s;
+}
+
+.popup button:active {
+  transform: scale(0.98);
+}
+
+.popup button:focus {
+  outline: none;
+}
