--- a/08.Meals-Finder/style.css
+++ b/08.Meals-Finder/style.css
@@ -85,6 +85,7 @@ button:focus {
   height: 100%;
   border: 4px solid #fff;
   border-radius: 2px;
+  object-fit: cover;
 }
 
 .meal-info {
@@ -105,12 +106,87 @@ button:focus {
   opacity: 1;
 }
 
+.single-meal {
+  margin: 30px auto;
+  width: 70%;
+}
+
+.single-meal img {
+  width: 300px;
+  height: 300px;
+  margin: 15px;
+  border: 4px solid #fff;
+  border-radius: 2px;
+  object-fit: cover;
+}
+
+.single-meal-info {
+  margin: 20px;
+  padding: 20px;
+  border: 2px #e09850 dashed;
+  border-radius: 5px;
+}
+
+.single-meal-info *:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.single-meal p {
+  letter-spacing: 0.5px;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.single-meal h2 {
+  margin: 15px 0;
+}
+
+.single-meal ul {
+  list-style: none;
+}
+
+.single-meal ul li {
+  border: 1px solid #ededed;
+  border-radius: 5px;
+  background-color: #fff;
+  display: inline-block;
+  color: #2d2013;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 5px;
+  margin: 0 5px 5px 0;
+}
+
 @media only screen and (max-width: 800px) {
+  .meals {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
-@media only screen and (max-width: 700) {
+@media only screen and (max-width: 700px) {
+  .meals {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .meal {
+    width: 200px;
+    height: 200px;
+  }
 }
-@media only screen and (max-width: 500) {
+@media only screen and (max-width: 500px) {
   input[type='text'] {
     width: 100%;
   }
+
+  .meals {
+    grid-template-columns: 1fr;
+  }
+
+  .meal {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+.margin-bottom-md {
+  margin-bottom: 20px !important;
 }
