--- a/10.Music-Player/style.css
+++ b/10.Music-Player/style.css
@@ -24,7 +24,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   margin: 0 auto;
 }
 
@@ -81,13 +81,18 @@ body {
 }
 
 .list-container {
-  flex-basis: 400px;
-  height: 200px;
-  background-color: cornflowerblue;
+  flex-basis: 500px;
+  height: 400px;
+  border: none;
+  border-radius: 15px;
+  background-color: #fff;
+  box-shadow: 0 20px 20px 0 rgba(252, 169, 169, 0.6);
+  overflow-y: scroll;
 }
 
 .music-container {
   flex-basis: 400px;
+  align-self: center;
   height: 100px;
   background-color: #fff;
   border: none;
@@ -203,5 +208,12 @@ body {
 
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .music-container,
+  .list-container {
+    margin: 20px auto;
   }
 }
