--- a/10.Music-Player/style.css
+++ b/10.Music-Player/style.css
@@ -51,7 +51,7 @@ body {
   width: 100%;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 20px 20px 0 rgba(252, 169, 169, 0.6);
+  box-shadow: 0 5px 10px 0 rgba(252, 169, 169, 0.6);
 }
 
 .search-container input::placeholder {
@@ -84,10 +84,89 @@ body {
   flex-basis: 500px;
   height: 400px;
   border: none;
-  border-radius: 15px;
+  border-radius: 15px 0 0 15px;
   background-color: #fff;
-  box-shadow: 0 20px 20px 0 rgba(252, 169, 169, 0.6);
+  box-shadow: 0 5px 10px rgba(252, 169, 169, 0.6);
   overflow-y: scroll;
+  padding: 10px;
+}
+
+.list-container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.list-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(252, 169, 169, 0.6);
+}
+
+.list-container::-webkit-scrollbar-thumb {
+  background-color: rgba(252, 169, 169, 0.6);
+  outline: 1px solid rgba(252, 169, 169, 0.6);
+}
+
+.song {
+  margin: 10px 0;
+  padding: 10px 0;
+  display: flex;
+}
+
+.song:not(:last-of-type) {
+  border-bottom: 1px solid #dfdbdf;
+}
+
+.song-order {
+  flex-basis: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.song-order span {
+  font-size: 20px;
+  color: #dfdbdf;
+}
+
+.song-photo {
+  width: 40px;
+  height: 40px;
+  margin-right: 15px;
+}
+
+.song-photo img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.song-info {
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.song-info .title {
+  margin-top: -5px;
+  margin-bottom: 5px;
+}
+
+.song-info .title a {
+  text-decoration: none;
+  color: #fe8daa;
+  font-size: 15px;
+}
+
+.song-info .artist {
+  font-size: 13px;
+  color: #dfdbdf;
+}
+
+.song-duration {
+  margin-right: 10px;
+  font-size: 15px;
+  color: #dfdbdf;
 }
 
 .music-container {
